--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,6 +1,6 @@
 foo = foo version 2
 democonfigclient.message=hello spring io
-my.name=frank
+my.name=frank1
 
 # routes to serviceId
 # routes to url
